syntax = "proto3";

option go_package = "urlshortener/pkg/proto/cachepb";

package cachepb;

import "pkg/proto/urlspb/urlspb.proto";

service CacheService {
	rpc GetUrl(GetUrlRequest) returns (GetUrlResponse);
	rpc SetUrl(SetUrlRequest) returns (NoContent);
}

message GetUrlRequest {
	string urlId = 1;
}

message GetUrlResponse {
	string redirectUrl = 1;
}

message SetUrlRequest {
	urlspb.Url url = 1;
}

message NoContent {}